fix letter spacing on hover details

--- a/css/main.scss
+++ b/css/main.scss
@@ -252,7 +252,7 @@ img {
     display: none;
     color: rgba(#fff, .8);
     font-style: italic;
-    letter-spacing: 0.07em;
+    letter-spacing: 0.02em;
 }
 
 .col-sm-4 a {
